# eros

./: Cargo.toml
src/: draw.rs  lib.rs  resources.rs  state_machine.rs
src/state_machine/: state_trait.rs
